--- a/WAMP/www/wd/SitePro/v1/css.css
+++ b/WAMP/www/wd/SitePro/v1/css.css
@@ -1,4 +1,20 @@
-h1 {
+body {
+    min-height: 100vh;
+    margin: 0;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
+
+header, footer {
+    min-height: 50px;
+    width: 100%;
+}
+
+footer > div {
+    text-align: center;
+}
+
+header > h1 {
     text-align: center;
 }
 
@@ -8,27 +24,38 @@ ul {
 
 .container {
     width: 100%;
-    overflow: hidden;
+    display: flex;
+}
+
+/*-----------------------------------*/
+
+nav {
+    width: 130px;
+    padding-right: 2em;
+    height: fit-content;
 }
 
 article {
-    float: right;
-    width: 89%;
+    flex: 1;
+    flex-grow: 15;
 }
 
 article > div {
     margin: 1em;
 }
 
-nav {
-    float: left;
-    width: 10%;
-}
-
 article, nav {
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #eee;
+    background-color: #ded;
+    color: #444;
+    box-shadow: 2px 2px 2px #ccc;
+    margin: 1%;
+}
+
+/*-----------------------------------*/
+
+a:link, a:visited {
     color: #444;
 }
 
@@ -36,4 +63,5 @@ a:link#currentPage, a:visited#currentPage {
     font-weight: bolder;
     text-decoration: none;
     outline: none;
+    font-size: large;
 }
