SitePro v1 - dernières modifications de CSS

--- a/WAMP/www/wd/SitePro/v1/css.css
+++ b/WAMP/www/wd/SitePro/v1/css.css
@@ -12,10 +12,18 @@ header, footer {
 
 footer > div {
     text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px 0;
+    background-color: #efe;
 }
 
 header > h1 {
     text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px 0;
+    background-color: #efe;
 }
 
 ul {
