--- a/WAMP/www/wd/TP2-PHP/v3/css/css.css
+++ b/WAMP/www/wd/TP2-PHP/v3/css/css.css
@@ -55,7 +55,7 @@ article > div {
     display: inline-block;
     margin: 1em;
     text-align: left;
-    width: 80%;
+    max-width: 1000px;
 }
 
 article  h1 {
