--- a/WAMP/www/wd/Projet/frontend/css/main_style.css
+++ b/WAMP/www/wd/Projet/frontend/css/main_style.css
@@ -1,9 +1,30 @@
+/* http://paletton.com/#uid=b2E3v2b0kbRt14+E48dwffUpTkImm */
+:root {
+    --base-color: #F2E8CF;
+    --accent-color: #BC4749;
+    --primary-color-0: #9BCA7F;	/* Main Primary color */
+    --primary-color-1: #D1E8C4;
+    --primary-color-2: #BBDFA6;
+    --primary-color-3: #7CB45B; 
+    --primary-color-4: #5C9C37;
+    --secondary-dark-color-0: #608094; 	/* Main Secondary color (1) */
+    --secondary-dark-color-1: #A1B2BD;
+    --secondary-dark-color-2: #7C94A4;
+    --secondary-dark-color-3: #466C84;
+    --secondary-dark-color-4: #2D5772;
+    --secondary-light-color-0: #CCDD8B;	/* Main Secondary color (2) */
+    --secondary-light-color-1: #EFF7D1;
+    --secondary-light-color-2: #E7F4B6;
+    --secondary-light-color-3: #B1C563;
+    --secondary-light-color-4: #93AB3C;
+}
+
 body {
-    background-color: rgb(255, 247, 236);
+    background-color: var(--base-color);
 }
 
 .sidebar {
-    background: rgb(5, 68, 104);
+    background: var(--primary-color-0);
     position: fixed;
     top: 0;
     left: 0;
@@ -11,6 +32,7 @@ body {
     height: 100%;
     padding: 20px 0;
     transition: all 0.5s ease;
+    z-index: 3;
 }
 
 .profil {
@@ -22,17 +44,18 @@ body {
     display: block;
     width: 100px;
     height: 100px;
+    border: 1px solid var(--primary-color-4);
     border-radius: 50%;
     margin: 0 auto;
 }
 
 .profil h3{
-    color: #ffffff;
+    color: var(--secondary-dark-color-4);
     margin: 10px 0 5px;
 }
 
 .profil p{
-    color: rgb(206, 240, 253);
+    color: var(--secondary-dark-color-3);
     font-size: 14px;
 }
 
@@ -43,31 +66,41 @@ ul {
 ul li a{
     display: block;
     padding: 13px 30px;
-    border-bottom: 1px solid #10558d;
-    color: rgb(241, 237, 237);
+    border-bottom: 1px solid var(--primary-color-3);
+    color: var(--secondary-dark-color-3);
     font-size: 16px;
     position: relative;
 }
 
 ul li a .icon{
-    color: #dee4ec;
+    color: var(--secondary-dark-color-3);
     width: 30px;
     display: inline-block;
 }
 
 ul li a:hover,
 ul li a.active{
-    color: #0c7db1;
-    background:white;
-    border-right: 2px solid rgb(5, 68, 104);
+    color: var(--secondary-dark-color-4);
+    background: var(--secondary-light-color-0);
+    border-right: 2px solid var(--secondary-light-color-3);
 }
 
 ul li a:hover .icon,
 ul li a.active .icon{
-    color: #0c7db1;
+    color: var(--secondary-dark-color-4);
 }
 
 ul li a:hover:before,
 ul li a.active:before{
     display: block;
+}
+
+#footer {
+    background-color: var(--primary-color-4);
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    bottom: 0;
+    left: 0;
+    z-index: 2;
 }
