--- a/WAMP/www/wd/Projet/frontend/css/conso_style.css
+++ b/WAMP/www/wd/Projet/frontend/css/conso_style.css
@@ -1,3 +1,20 @@
+.wrapper.aliments {
+    grid-template:
+    "liste-aliment" 1fr;
+    height: 90vh;
+    overflow-y: scroll;
+}
+
+.wrapper.aliments .liste-aliment {
+    grid-area: liste-aliment;
+}
+
+.wrapper.aliments td, .wrapper.mes_repas td {
+    white-space: pre-wrap !important;
+    word-wrap: break-word !important;
+    table-layout: fixed;
+}
+
 .add-btn {
     height: 4em;
     position: relative;
@@ -21,10 +38,10 @@
     background-color: rgba(0, 0, 0, 0.5);
     display: grid;
     grid-template:
-    ". . ." 1fr
-    ". blocAdd ." 2fr
-    ". . ." 1fr
-    / 1fr 3fr 1fr;
+    ". . ." 2fr
+    ". blocAdd ." 3fr
+    ". . ." 2fr
+    / 3fr 4fr 3fr;
 }
 
 .layer .bloc {
@@ -32,6 +49,7 @@
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.8);
 }
 
-.layer .h3 {
+.layer .bloc * {
     text-align: center;
+    margin: 1em auto;
 }
