Réorganisation des scripts et gestion des formulaires

--- a/WAMP/www/wd/Projet/frontend/css/conso_style.css
+++ b/WAMP/www/wd/Projet/frontend/css/conso_style.css
@@ -9,7 +9,7 @@
     grid-area: liste-aliment;
 }
 
-.wrapper.aliments td, .wrapper.mes_repas td {
+.wrapper.aliments td, .wrapper.mes-repas td {
     white-space: pre-wrap !important;
     word-wrap: break-word !important;
     table-layout: fixed;
